Disable calling posix_fallocate before mapping chunk, it causes to much disk activity on some filesystems

BUG: 241339

svn path=/trunk/extragear/network/libktorrent/; revision=1137278