src/diskio/cachefile.cpp
@@ -127,8 +127,10 @@ namespace bt
 			throw Error(i18n("Attempting to write beyond the maximum size of %1",path));
 		}
 		
+		/*
 		if (!read_only && (mode == WRITE || mode == RW) && !allocateBytes(off,size))
 			throw Error(i18n("Not enough free disk space for %1",path));
+		*/
 		
 		int mmap_flag = 0;
 		switch (mode)
